// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test suites for Signin component +++ changes  username input field 1`] = `
ShallowWrapper {
  "length": 1,
  "node": <div
    className="Centers"
  >
    <div
      className=""
      id=""
    >
      <nav
        className=""
        role="navigation"
        style={
          Object {
            "backgroundColor": "#212F3C",
          }
        }
      >
        <div
          className="nav-wrapper container"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/"
          >
            <a
              className="brand-logo white-text"
              id="logo-container "
            >
              Andela
            </a>
          </Link>
          <ul
            className="right hide-on-med-and-down"
          />
          <ul
            className="side-nav"
            id="nav-mobile"
          >
            <li>
              <a
                href="#"
              >
                Andela
              </a>
            </li>
          </ul>
          <a
            className="button-collapse"
            data-activates="nav-mobile"
            href="#"
          >
            <i
              className="material-icons"
            >
              menu
            </i>
          </a>
        </div>
      </nav>
      <div
        className="bgimg"
        id="bgPage"
      >
        <div
          className="row"
        >
          <div
            className="col s12 m12 l5 white-text hide-on-med-and-down"
            id="tp-row"
          >
            <div
              className=""
              id="tp-child"
            >
              <h3>
                Sign In
              </h3>
            </div>
            <p>
              Lorem Ipsum It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
              <br />
              <br />
               The only five centuries, but also the leap into electronic typesetting, remaining essentially 
            </p>
            <p>
              Not a Member??
            </p>
            <br />
            <Link
              onlyActiveOnIndex={false}
              style={Object {}}
              to="/auth/signup"
            >
              <a
                className="btn red"
                id="download-button"
              >
                Sign Up
              </a>
            </Link>
          </div>
          <div
            className="col s12 m12 l7"
            style={
              Object {
                "paddingTop": 45,
              }
            }
          >
            <div
              className=""
              id="container"
            >
              <div
                className=""
              >
                <div
                  className="row"
                >
                  <div
                    className="card col m8 offset-m2"
                  >
                    <div
                      className="card-content white lighten-4"
                      style={
                        Object {
                          "color": "#212F3C",
                        }
                      }
                    >
                      <div
                        className="col s8 offset-s2"
                      >
                        <div
                          className="col s6"
                        >
                          <a
                            className="waves-effect waves-light btn blue"
                          >
                            <i
                              className="material-icons left"
                            />
                            Facebook
                          </a>
                        </div>
                        <div
                          className="col s6"
                        >
                          <a
                            className="waves-effect waves-light btn red"
                          >
                            <i
                              className="material-icons left"
                            />
                            Google
                          </a>
                        </div>
                      </div>
                      <div
                        id="test4"
                      >
                        <div
                          className="row"
                        >
                          <form
                            className="col s12"
                            id="add-form"
                            onSubmit={[Function]}
                          >
                            
                            
                            <div
                              className="row"
                            >
                              <div
                                className="input-field col s12"
                              >
                                <i
                                  className="material-icons prefix"
                                >
                                  mail
                                </i>
                                <input
                                  className="validate"
                                  id="icon_telephone"
                                  name="email"
                                  onChange={[Function]}
                                  placeholder="Email"
                                  type="text"
                                />
                                <label
                                  htmlFor="icon_telephone"
                                />
                              </div>
                              <div
                                className="input-field col s12"
                              >
                                <i
                                  className="material-icons prefix"
                                >
                                  lock
                                </i>
                                <input
                                  className="validate passwordz"
                                  id="icon_telephone"
                                  name="password"
                                  onChange={[Function]}
                                  placeholder="Password"
                                  type="password"
                                />
                                <label
                                  htmlFor="icon_telephone"
                                />
                              </div>
                            </div>
                            <div
                              className=""
                              style={
                                Object {
                                  "textAlign": "center",
                                }
                              }
                            >
                              <button
                                className="waves-effect waves-light btn red"
                                type="submit"
                              >
                                <i
                                  className=""
                                />
                                Sign In
                              </button>
                            </div>
                          </form>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "nodes": Array [
    <div
      className="Centers"
    >
      <div
        className=""
        id=""
      >
        <nav
          className=""
          role="navigation"
          style={
            Object {
              "backgroundColor": "#212F3C",
            }
          }
        >
          <div
            className="nav-wrapper container"
          >
            <Link
              onlyActiveOnIndex={false}
              style={Object {}}
              to="/"
            >
              <a
                className="brand-logo white-text"
                id="logo-container "
              >
                Andela
              </a>
            </Link>
            <ul
              className="right hide-on-med-and-down"
            />
            <ul
              className="side-nav"
              id="nav-mobile"
            >
              <li>
                <a
                  href="#"
                >
                  Andela
                </a>
              </li>
            </ul>
            <a
              className="button-collapse"
              data-activates="nav-mobile"
              href="#"
            >
              <i
                className="material-icons"
              >
                menu
              </i>
            </a>
          </div>
        </nav>
        <div
          className="bgimg"
          id="bgPage"
        >
          <div
            className="row"
          >
            <div
              className="col s12 m12 l5 white-text hide-on-med-and-down"
              id="tp-row"
            >
              <div
                className=""
                id="tp-child"
              >
                <h3>
                  Sign In
                </h3>
              </div>
              <p>
                Lorem Ipsum It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                <br />
                <br />
                 The only five centuries, but also the leap into electronic typesetting, remaining essentially 
              </p>
              <p>
                Not a Member??
              </p>
              <br />
              <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/auth/signup"
              >
                <a
                  className="btn red"
                  id="download-button"
                >
                  Sign Up
                </a>
              </Link>
            </div>
            <div
              className="col s12 m12 l7"
              style={
                Object {
                  "paddingTop": 45,
                }
              }
            >
              <div
                className=""
                id="container"
              >
                <div
                  className=""
                >
                  <div
                    className="row"
                  >
                    <div
                      className="card col m8 offset-m2"
                    >
                      <div
                        className="card-content white lighten-4"
                        style={
                          Object {
                            "color": "#212F3C",
                          }
                        }
                      >
                        <div
                          className="col s8 offset-s2"
                        >
                          <div
                            className="col s6"
                          >
                            <a
                              className="waves-effect waves-light btn blue"
                            >
                              <i
                                className="material-icons left"
                              />
                              Facebook
                            </a>
                          </div>
                          <div
                            className="col s6"
                          >
                            <a
                              className="waves-effect waves-light btn red"
                            >
                              <i
                                className="material-icons left"
                              />
                              Google
                            </a>
                          </div>
                        </div>
                        <div
                          id="test4"
                        >
                          <div
                            className="row"
                          >
                            <form
                              className="col s12"
                              id="add-form"
                              onSubmit={[Function]}
                            >
                              
                              
                              <div
                                className="row"
                              >
                                <div
                                  className="input-field col s12"
                                >
                                  <i
                                    className="material-icons prefix"
                                  >
                                    mail
                                  </i>
                                  <input
                                    className="validate"
                                    id="icon_telephone"
                                    name="email"
                                    onChange={[Function]}
                                    placeholder="Email"
                                    type="text"
                                  />
                                  <label
                                    htmlFor="icon_telephone"
                                  />
                                </div>
                                <div
                                  className="input-field col s12"
                                >
                                  <i
                                    className="material-icons prefix"
                                  >
                                    lock
                                  </i>
                                  <input
                                    className="validate passwordz"
                                    id="icon_telephone"
                                    name="password"
                                    onChange={[Function]}
                                    placeholder="Password"
                                    type="password"
                                  />
                                  <label
                                    htmlFor="icon_telephone"
                                  />
                                </div>
                              </div>
                              <div
                                className=""
                                style={
                                  Object {
                                    "textAlign": "center",
                                  }
                                }
                              >
                                <button
                                  className="waves-effect waves-light btn red"
                                  type="submit"
                                >
                                  <i
                                    className=""
                                  />
                                  Sign In
                                </button>
                              </div>
                            </form>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_context": Object {},
      "_currentElement": <Centers />,
      "_instance": Centers {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "handleSubmit": [Function],
        "onChange": [Function],
        "props": Object {},
        "refs": Object {},
        "state": Object {
          "email": "",
          "password": "",
          "undefined": "janedoe",
        },
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 4,
      "_nativeContainerInfo": null,
      "_nativeParent": null,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": Object {
        "_currentElement": <div
          className="Centers"
        >
          <div
            className=""
            id=""
          >
            <nav
              className=""
              role="navigation"
              style={
                Object {
                  "backgroundColor": "#212F3C",
                }
              }
            >
              <div
                className="nav-wrapper container"
              >
                <Link
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/"
                >
                  <a
                    className="brand-logo white-text"
                    id="logo-container "
                  >
                    Andela
                  </a>
                </Link>
                <ul
                  className="right hide-on-med-and-down"
                />
                <ul
                  className="side-nav"
                  id="nav-mobile"
                >
                  <li>
                    <a
                      href="#"
                    >
                      Andela
                    </a>
                  </li>
                </ul>
                <a
                  className="button-collapse"
                  data-activates="nav-mobile"
                  href="#"
                >
                  <i
                    className="material-icons"
                  >
                    menu
                  </i>
                </a>
              </div>
            </nav>
            <div
              className="bgimg"
              id="bgPage"
            >
              <div
                className="row"
              >
                <div
                  className="col s12 m12 l5 white-text hide-on-med-and-down"
                  id="tp-row"
                >
                  <div
                    className=""
                    id="tp-child"
                  >
                    <h3>
                      Sign In
                    </h3>
                  </div>
                  <p>
                    Lorem Ipsum It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                    <br />
                    <br />
                     The only five centuries, but also the leap into electronic typesetting, remaining essentially 
                  </p>
                  <p>
                    Not a Member??
                  </p>
                  <br />
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/auth/signup"
                  >
                    <a
                      className="btn red"
                      id="download-button"
                    >
                      Sign Up
                    </a>
                  </Link>
                </div>
                <div
                  className="col s12 m12 l7"
                  style={
                    Object {
                      "paddingTop": 45,
                    }
                  }
                >
                  <div
                    className=""
                    id="container"
                  >
                    <div
                      className=""
                    >
                      <div
                        className="row"
                      >
                        <div
                          className="card col m8 offset-m2"
                        >
                          <div
                            className="card-content white lighten-4"
                            style={
                              Object {
                                "color": "#212F3C",
                              }
                            }
                          >
                            <div
                              className="col s8 offset-s2"
                            >
                              <div
                                className="col s6"
                              >
                                <a
                                  className="waves-effect waves-light btn blue"
                                >
                                  <i
                                    className="material-icons left"
                                  />
                                  Facebook
                                </a>
                              </div>
                              <div
                                className="col s6"
                              >
                                <a
                                  className="waves-effect waves-light btn red"
                                >
                                  <i
                                    className="material-icons left"
                                  />
                                  Google
                                </a>
                              </div>
                            </div>
                            <div
                              id="test4"
                            >
                              <div
                                className="row"
                              >
                                <form
                                  className="col s12"
                                  id="add-form"
                                  onSubmit={[Function]}
                                >
                                  
                                  
                                  <div
                                    className="row"
                                  >
                                    <div
                                      className="input-field col s12"
                                    >
                                      <i
                                        className="material-icons prefix"
                                      >
                                        mail
                                      </i>
                                      <input
                                        className="validate"
                                        id="icon_telephone"
                                        name="email"
                                        onChange={[Function]}
                                        placeholder="Email"
                                        type="text"
                                      />
                                      <label
                                        htmlFor="icon_telephone"
                                      />
                                    </div>
                                    <div
                                      className="input-field col s12"
                                    >
                                      <i
                                        className="material-icons prefix"
                                      >
                                        lock
                                      </i>
                                      <input
                                        className="validate passwordz"
                                        id="icon_telephone"
                                        name="password"
                                        onChange={[Function]}
                                        placeholder="Password"
                                        type="password"
                                      />
                                      <label
                                        htmlFor="icon_telephone"
                                      />
                                    </div>
                                  </div>
                                  <div
                                    className=""
                                    style={
                                      Object {
                                        "textAlign": "center",
                                      }
                                    }
                                  >
                                    <button
                                      className="waves-effect waves-light btn red"
                                      type="submit"
                                    >
                                      <i
                                        className=""
                                      />
                                      Sign In
                                    </button>
                                  </div>
                                </form>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>,
        "_renderedOutput": <div
          className="Centers"
        >
          <div
            className=""
            id=""
          >
            <nav
              className=""
              role="navigation"
              style={
                Object {
                  "backgroundColor": "#212F3C",
                }
              }
            >
              <div
                className="nav-wrapper container"
              >
                <Link
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/"
                >
                  <a
                    className="brand-logo white-text"
                    id="logo-container "
                  >
                    Andela
                  </a>
                </Link>
                <ul
                  className="right hide-on-med-and-down"
                />
                <ul
                  className="side-nav"
                  id="nav-mobile"
                >
                  <li>
                    <a
                      href="#"
                    >
                      Andela
                    </a>
                  </li>
                </ul>
                <a
                  className="button-collapse"
                  data-activates="nav-mobile"
                  href="#"
                >
                  <i
                    className="material-icons"
                  >
                    menu
                  </i>
                </a>
              </div>
            </nav>
            <div
              className="bgimg"
              id="bgPage"
            >
              <div
                className="row"
              >
                <div
                  className="col s12 m12 l5 white-text hide-on-med-and-down"
                  id="tp-row"
                >
                  <div
                    className=""
                    id="tp-child"
                  >
                    <h3>
                      Sign In
                    </h3>
                  </div>
                  <p>
                    Lorem Ipsum It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                    <br />
                    <br />
                     The only five centuries, but also the leap into electronic typesetting, remaining essentially 
                  </p>
                  <p>
                    Not a Member??
                  </p>
                  <br />
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/auth/signup"
                  >
                    <a
                      className="btn red"
                      id="download-button"
                    >
                      Sign Up
                    </a>
                  </Link>
                </div>
                <div
                  className="col s12 m12 l7"
                  style={
                    Object {
                      "paddingTop": 45,
                    }
                  }
                >
                  <div
                    className=""
                    id="container"
                  >
                    <div
                      className=""
                    >
                      <div
                        className="row"
                      >
                        <div
                          className="card col m8 offset-m2"
                        >
                          <div
                            className="card-content white lighten-4"
                            style={
                              Object {
                                "color": "#212F3C",
                              }
                            }
                          >
                            <div
                              className="col s8 offset-s2"
                            >
                              <div
                                className="col s6"
                              >
                                <a
                                  className="waves-effect waves-light btn blue"
                                >
                                  <i
                                    className="material-icons left"
                                  />
                                  Facebook
                                </a>
                              </div>
                              <div
                                className="col s6"
                              >
                                <a
                                  className="waves-effect waves-light btn red"
                                >
                                  <i
                                    className="material-icons left"
                                  />
                                  Google
                                </a>
                              </div>
                            </div>
                            <div
                              id="test4"
                            >
                              <div
                                className="row"
                              >
                                <form
                                  className="col s12"
                                  id="add-form"
                                  onSubmit={[Function]}
                                >
                                  
                                  
                                  <div
                                    className="row"
                                  >
                                    <div
                                      className="input-field col s12"
                                    >
                                      <i
                                        className="material-icons prefix"
                                      >
                                        mail
                                      </i>
                                      <input
                                        className="validate"
                                        id="icon_telephone"
                                        name="email"
                                        onChange={[Function]}
                                        placeholder="Email"
                                        type="text"
                                      />
                                      <label
                                        htmlFor="icon_telephone"
                                      />
                                    </div>
                                    <div
                                      className="input-field col s12"
                                    >
                                      <i
                                        className="material-icons prefix"
                                      >
                                        lock
                                      </i>
                                      <input
                                        className="validate passwordz"
                                        id="icon_telephone"
                                        name="password"
                                        onChange={[Function]}
                                        placeholder="Password"
                                        type="password"
                                      />
                                      <label
                                        htmlFor="icon_telephone"
                                      />
                                    </div>
                                  </div>
                                  <div
                                    className=""
                                    style={
                                      Object {
                                        "textAlign": "center",
                                      }
                                    }
                                  >
                                    <button
                                      className="waves-effect waves-light btn red"
                                      type="submit"
                                    >
                                      <i
                                        className=""
                                      />
                                      Sign In
                                    </button>
                                  </div>
                                </form>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": null,
      "_topLevelWrapper": null,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Centers />,
}
`;

exports[`Test suites for Signin component +++ renders without crashing 1`] = `
ShallowWrapper {
  "length": 1,
  "node": <div
    className="Centers"
  >
    <div
      className=""
      id=""
    >
      <nav
        className=""
        role="navigation"
        style={
          Object {
            "backgroundColor": "#212F3C",
          }
        }
      >
        <div
          className="nav-wrapper container"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/"
          >
            <a
              className="brand-logo white-text"
              id="logo-container "
            >
              Andela
            </a>
          </Link>
          <ul
            className="right hide-on-med-and-down"
          />
          <ul
            className="side-nav"
            id="nav-mobile"
          >
            <li>
              <a
                href="#"
              >
                Andela
              </a>
            </li>
          </ul>
          <a
            className="button-collapse"
            data-activates="nav-mobile"
            href="#"
          >
            <i
              className="material-icons"
            >
              menu
            </i>
          </a>
        </div>
      </nav>
      <div
        className="bgimg"
        id="bgPage"
      >
        <div
          className="row"
        >
          <div
            className="col s12 m12 l5 white-text hide-on-med-and-down"
            id="tp-row"
          >
            <div
              className=""
              id="tp-child"
            >
              <h3>
                Sign In
              </h3>
            </div>
            <p>
              Lorem Ipsum It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
              <br />
              <br />
               The only five centuries, but also the leap into electronic typesetting, remaining essentially 
            </p>
            <p>
              Not a Member??
            </p>
            <br />
            <Link
              onlyActiveOnIndex={false}
              style={Object {}}
              to="/auth/signup"
            >
              <a
                className="btn red"
                id="download-button"
              >
                Sign Up
              </a>
            </Link>
          </div>
          <div
            className="col s12 m12 l7"
            style={
              Object {
                "paddingTop": 45,
              }
            }
          >
            <div
              className=""
              id="container"
            >
              <div
                className=""
              >
                <div
                  className="row"
                >
                  <div
                    className="card col m8 offset-m2"
                  >
                    <div
                      className="card-content white lighten-4"
                      style={
                        Object {
                          "color": "#212F3C",
                        }
                      }
                    >
                      <div
                        className="col s8 offset-s2"
                      >
                        <div
                          className="col s6"
                        >
                          <a
                            className="waves-effect waves-light btn blue"
                          >
                            <i
                              className="material-icons left"
                            />
                            Facebook
                          </a>
                        </div>
                        <div
                          className="col s6"
                        >
                          <a
                            className="waves-effect waves-light btn red"
                          >
                            <i
                              className="material-icons left"
                            />
                            Google
                          </a>
                        </div>
                      </div>
                      <div
                        id="test4"
                      >
                        <div
                          className="row"
                        >
                          <form
                            className="col s12"
                            id="add-form"
                            onSubmit={[Function]}
                          >
                            
                            
                            <div
                              className="row"
                            >
                              <div
                                className="input-field col s12"
                              >
                                <i
                                  className="material-icons prefix"
                                >
                                  mail
                                </i>
                                <input
                                  className="validate"
                                  id="icon_telephone"
                                  name="email"
                                  onChange={[Function]}
                                  placeholder="Email"
                                  type="text"
                                />
                                <label
                                  htmlFor="icon_telephone"
                                />
                              </div>
                              <div
                                className="input-field col s12"
                              >
                                <i
                                  className="material-icons prefix"
                                >
                                  lock
                                </i>
                                <input
                                  className="validate passwordz"
                                  id="icon_telephone"
                                  name="password"
                                  onChange={[Function]}
                                  placeholder="Password"
                                  type="password"
                                />
                                <label
                                  htmlFor="icon_telephone"
                                />
                              </div>
                            </div>
                            <div
                              className=""
                              style={
                                Object {
                                  "textAlign": "center",
                                }
                              }
                            >
                              <button
                                className="waves-effect waves-light btn red"
                                type="submit"
                              >
                                <i
                                  className=""
                                />
                                Sign In
                              </button>
                            </div>
                          </form>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "nodes": Array [
    <div
      className="Centers"
    >
      <div
        className=""
        id=""
      >
        <nav
          className=""
          role="navigation"
          style={
            Object {
              "backgroundColor": "#212F3C",
            }
          }
        >
          <div
            className="nav-wrapper container"
          >
            <Link
              onlyActiveOnIndex={false}
              style={Object {}}
              to="/"
            >
              <a
                className="brand-logo white-text"
                id="logo-container "
              >
                Andela
              </a>
            </Link>
            <ul
              className="right hide-on-med-and-down"
            />
            <ul
              className="side-nav"
              id="nav-mobile"
            >
              <li>
                <a
                  href="#"
                >
                  Andela
                </a>
              </li>
            </ul>
            <a
              className="button-collapse"
              data-activates="nav-mobile"
              href="#"
            >
              <i
                className="material-icons"
              >
                menu
              </i>
            </a>
          </div>
        </nav>
        <div
          className="bgimg"
          id="bgPage"
        >
          <div
            className="row"
          >
            <div
              className="col s12 m12 l5 white-text hide-on-med-and-down"
              id="tp-row"
            >
              <div
                className=""
                id="tp-child"
              >
                <h3>
                  Sign In
                </h3>
              </div>
              <p>
                Lorem Ipsum It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                <br />
                <br />
                 The only five centuries, but also the leap into electronic typesetting, remaining essentially 
              </p>
              <p>
                Not a Member??
              </p>
              <br />
              <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/auth/signup"
              >
                <a
                  className="btn red"
                  id="download-button"
                >
                  Sign Up
                </a>
              </Link>
            </div>
            <div
              className="col s12 m12 l7"
              style={
                Object {
                  "paddingTop": 45,
                }
              }
            >
              <div
                className=""
                id="container"
              >
                <div
                  className=""
                >
                  <div
                    className="row"
                  >
                    <div
                      className="card col m8 offset-m2"
                    >
                      <div
                        className="card-content white lighten-4"
                        style={
                          Object {
                            "color": "#212F3C",
                          }
                        }
                      >
                        <div
                          className="col s8 offset-s2"
                        >
                          <div
                            className="col s6"
                          >
                            <a
                              className="waves-effect waves-light btn blue"
                            >
                              <i
                                className="material-icons left"
                              />
                              Facebook
                            </a>
                          </div>
                          <div
                            className="col s6"
                          >
                            <a
                              className="waves-effect waves-light btn red"
                            >
                              <i
                                className="material-icons left"
                              />
                              Google
                            </a>
                          </div>
                        </div>
                        <div
                          id="test4"
                        >
                          <div
                            className="row"
                          >
                            <form
                              className="col s12"
                              id="add-form"
                              onSubmit={[Function]}
                            >
                              
                              
                              <div
                                className="row"
                              >
                                <div
                                  className="input-field col s12"
                                >
                                  <i
                                    className="material-icons prefix"
                                  >
                                    mail
                                  </i>
                                  <input
                                    className="validate"
                                    id="icon_telephone"
                                    name="email"
                                    onChange={[Function]}
                                    placeholder="Email"
                                    type="text"
                                  />
                                  <label
                                    htmlFor="icon_telephone"
                                  />
                                </div>
                                <div
                                  className="input-field col s12"
                                >
                                  <i
                                    className="material-icons prefix"
                                  >
                                    lock
                                  </i>
                                  <input
                                    className="validate passwordz"
                                    id="icon_telephone"
                                    name="password"
                                    onChange={[Function]}
                                    placeholder="Password"
                                    type="password"
                                  />
                                  <label
                                    htmlFor="icon_telephone"
                                  />
                                </div>
                              </div>
                              <div
                                className=""
                                style={
                                  Object {
                                    "textAlign": "center",
                                  }
                                }
                              >
                                <button
                                  className="waves-effect waves-light btn red"
                                  type="submit"
                                >
                                  <i
                                    className=""
                                  />
                                  Sign In
                                </button>
                              </div>
                            </form>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_context": Object {},
      "_currentElement": <Centers />,
      "_instance": Centers {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "handleSubmit": [Function],
        "onChange": [Function],
        "props": Object {},
        "refs": Object {},
        "state": Object {
          "email": "",
          "password": "",
        },
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_nativeContainerInfo": null,
      "_nativeParent": null,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": Object {
        "_currentElement": <div
          className="Centers"
        >
          <div
            className=""
            id=""
          >
            <nav
              className=""
              role="navigation"
              style={
                Object {
                  "backgroundColor": "#212F3C",
                }
              }
            >
              <div
                className="nav-wrapper container"
              >
                <Link
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/"
                >
                  <a
                    className="brand-logo white-text"
                    id="logo-container "
                  >
                    Andela
                  </a>
                </Link>
                <ul
                  className="right hide-on-med-and-down"
                />
                <ul
                  className="side-nav"
                  id="nav-mobile"
                >
                  <li>
                    <a
                      href="#"
                    >
                      Andela
                    </a>
                  </li>
                </ul>
                <a
                  className="button-collapse"
                  data-activates="nav-mobile"
                  href="#"
                >
                  <i
                    className="material-icons"
                  >
                    menu
                  </i>
                </a>
              </div>
            </nav>
            <div
              className="bgimg"
              id="bgPage"
            >
              <div
                className="row"
              >
                <div
                  className="col s12 m12 l5 white-text hide-on-med-and-down"
                  id="tp-row"
                >
                  <div
                    className=""
                    id="tp-child"
                  >
                    <h3>
                      Sign In
                    </h3>
                  </div>
                  <p>
                    Lorem Ipsum It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                    <br />
                    <br />
                     The only five centuries, but also the leap into electronic typesetting, remaining essentially 
                  </p>
                  <p>
                    Not a Member??
                  </p>
                  <br />
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/auth/signup"
                  >
                    <a
                      className="btn red"
                      id="download-button"
                    >
                      Sign Up
                    </a>
                  </Link>
                </div>
                <div
                  className="col s12 m12 l7"
                  style={
                    Object {
                      "paddingTop": 45,
                    }
                  }
                >
                  <div
                    className=""
                    id="container"
                  >
                    <div
                      className=""
                    >
                      <div
                        className="row"
                      >
                        <div
                          className="card col m8 offset-m2"
                        >
                          <div
                            className="card-content white lighten-4"
                            style={
                              Object {
                                "color": "#212F3C",
                              }
                            }
                          >
                            <div
                              className="col s8 offset-s2"
                            >
                              <div
                                className="col s6"
                              >
                                <a
                                  className="waves-effect waves-light btn blue"
                                >
                                  <i
                                    className="material-icons left"
                                  />
                                  Facebook
                                </a>
                              </div>
                              <div
                                className="col s6"
                              >
                                <a
                                  className="waves-effect waves-light btn red"
                                >
                                  <i
                                    className="material-icons left"
                                  />
                                  Google
                                </a>
                              </div>
                            </div>
                            <div
                              id="test4"
                            >
                              <div
                                className="row"
                              >
                                <form
                                  className="col s12"
                                  id="add-form"
                                  onSubmit={[Function]}
                                >
                                  
                                  
                                  <div
                                    className="row"
                                  >
                                    <div
                                      className="input-field col s12"
                                    >
                                      <i
                                        className="material-icons prefix"
                                      >
                                        mail
                                      </i>
                                      <input
                                        className="validate"
                                        id="icon_telephone"
                                        name="email"
                                        onChange={[Function]}
                                        placeholder="Email"
                                        type="text"
                                      />
                                      <label
                                        htmlFor="icon_telephone"
                                      />
                                    </div>
                                    <div
                                      className="input-field col s12"
                                    >
                                      <i
                                        className="material-icons prefix"
                                      >
                                        lock
                                      </i>
                                      <input
                                        className="validate passwordz"
                                        id="icon_telephone"
                                        name="password"
                                        onChange={[Function]}
                                        placeholder="Password"
                                        type="password"
                                      />
                                      <label
                                        htmlFor="icon_telephone"
                                      />
                                    </div>
                                  </div>
                                  <div
                                    className=""
                                    style={
                                      Object {
                                        "textAlign": "center",
                                      }
                                    }
                                  >
                                    <button
                                      className="waves-effect waves-light btn red"
                                      type="submit"
                                    >
                                      <i
                                        className=""
                                      />
                                      Sign In
                                    </button>
                                  </div>
                                </form>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>,
        "_renderedOutput": <div
          className="Centers"
        >
          <div
            className=""
            id=""
          >
            <nav
              className=""
              role="navigation"
              style={
                Object {
                  "backgroundColor": "#212F3C",
                }
              }
            >
              <div
                className="nav-wrapper container"
              >
                <Link
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/"
                >
                  <a
                    className="brand-logo white-text"
                    id="logo-container "
                  >
                    Andela
                  </a>
                </Link>
                <ul
                  className="right hide-on-med-and-down"
                />
                <ul
                  className="side-nav"
                  id="nav-mobile"
                >
                  <li>
                    <a
                      href="#"
                    >
                      Andela
                    </a>
                  </li>
                </ul>
                <a
                  className="button-collapse"
                  data-activates="nav-mobile"
                  href="#"
                >
                  <i
                    className="material-icons"
                  >
                    menu
                  </i>
                </a>
              </div>
            </nav>
            <div
              className="bgimg"
              id="bgPage"
            >
              <div
                className="row"
              >
                <div
                  className="col s12 m12 l5 white-text hide-on-med-and-down"
                  id="tp-row"
                >
                  <div
                    className=""
                    id="tp-child"
                  >
                    <h3>
                      Sign In
                    </h3>
                  </div>
                  <p>
                    Lorem Ipsum It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                    <br />
                    <br />
                     The only five centuries, but also the leap into electronic typesetting, remaining essentially 
                  </p>
                  <p>
                    Not a Member??
                  </p>
                  <br />
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/auth/signup"
                  >
                    <a
                      className="btn red"
                      id="download-button"
                    >
                      Sign Up
                    </a>
                  </Link>
                </div>
                <div
                  className="col s12 m12 l7"
                  style={
                    Object {
                      "paddingTop": 45,
                    }
                  }
                >
                  <div
                    className=""
                    id="container"
                  >
                    <div
                      className=""
                    >
                      <div
                        className="row"
                      >
                        <div
                          className="card col m8 offset-m2"
                        >
                          <div
                            className="card-content white lighten-4"
                            style={
                              Object {
                                "color": "#212F3C",
                              }
                            }
                          >
                            <div
                              className="col s8 offset-s2"
                            >
                              <div
                                className="col s6"
                              >
                                <a
                                  className="waves-effect waves-light btn blue"
                                >
                                  <i
                                    className="material-icons left"
                                  />
                                  Facebook
                                </a>
                              </div>
                              <div
                                className="col s6"
                              >
                                <a
                                  className="waves-effect waves-light btn red"
                                >
                                  <i
                                    className="material-icons left"
                                  />
                                  Google
                                </a>
                              </div>
                            </div>
                            <div
                              id="test4"
                            >
                              <div
                                className="row"
                              >
                                <form
                                  className="col s12"
                                  id="add-form"
                                  onSubmit={[Function]}
                                >
                                  
                                  
                                  <div
                                    className="row"
                                  >
                                    <div
                                      className="input-field col s12"
                                    >
                                      <i
                                        className="material-icons prefix"
                                      >
                                        mail
                                      </i>
                                      <input
                                        className="validate"
                                        id="icon_telephone"
                                        name="email"
                                        onChange={[Function]}
                                        placeholder="Email"
                                        type="text"
                                      />
                                      <label
                                        htmlFor="icon_telephone"
                                      />
                                    </div>
                                    <div
                                      className="input-field col s12"
                                    >
                                      <i
                                        className="material-icons prefix"
                                      >
                                        lock
                                      </i>
                                      <input
                                        className="validate passwordz"
                                        id="icon_telephone"
                                        name="password"
                                        onChange={[Function]}
                                        placeholder="Password"
                                        type="password"
                                      />
                                      <label
                                        htmlFor="icon_telephone"
                                      />
                                    </div>
                                  </div>
                                  <div
                                    className=""
                                    style={
                                      Object {
                                        "textAlign": "center",
                                      }
                                    }
                                  >
                                    <button
                                      className="waves-effect waves-light btn red"
                                      type="submit"
                                    >
                                      <i
                                        className=""
                                      />
                                      Sign In
                                    </button>
                                  </div>
                                </form>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": null,
      "_topLevelWrapper": null,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Centers />,
}
`;
